--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,23 @@
-version: "3.9"
 services:
   app1:
-    build: .
-    container_name: devops_app1
+    image: ${IMAGE_TAG}
     environment:
       - JWT_SECRET_B64=${JWT_SECRET_B64}
+    ports:
+      - "8081:8080"
   app2:
-    build: .
-    container_name: devops_app2
+    image: ${IMAGE_TAG}
     environment:
       - JWT_SECRET_B64=${JWT_SECRET_B64}
+    ports:
+      - "8082:8080"
 
   lb:
-    image: docker.io/library/nginx:1.27
-    container_name: devops_lb
-    depends_on: [app1, app2]
+    image: nginx:1.27
     ports:
       - "8080:80"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - app1
+      - app2
