--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,30 +8,14 @@ on:
   workflow_dispatch: {}   
 
 jobs:
-  build-test:
-      runs-on: ubuntu-latest
-      steps:
-        - uses: actions/checkout@v4
-        - uses: actions/setup-java@v4
-          with:
-            distribution: temurin
-            java-version: '21'
-        - name: Cache Maven
-          uses: actions/cache@v4
-          with:
-            path: ~/.m2/repository
-            key: m2-${{ runner.os }}-${{ hashFiles('**/pom.xml') }}
-        - name: Build + Test 
-          run: mvn -B clean verify
-
   build-image:
     needs: build-test
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
+    permissions: { contents: read, packages: write }
     env:
       IMAGE_NAME: ghcr.io/${{ github.repository_owner }}/devops-exercise
+    outputs:
+      image_tag: ${{ steps.meta.outputs.IMAGE_TAG }}   # <-- define output del job
     steps:
       - uses: actions/checkout@v4
       - uses: docker/setup-buildx-action@v3
@@ -40,7 +24,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.DEVOPS_PWD }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       - name: Build & Push
         uses: docker/build-push-action@v6
         with:
@@ -54,6 +38,17 @@ jobs:
       - name: Set IMAGE_TAG output
         id: meta
         run: echo "IMAGE_TAG=${{ env.IMAGE_NAME }}:${{ github.sha }}" >> $GITHUB_OUTPUT
+
+  deploy:
+    needs: build-image
+    if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
+    runs-on: [self-hosted, Windows, X64]
+    env:
+      IMAGE_TAG: ${{ needs.build-image.outputs.image_tag }}   # <-- ahora sí llega el tag
+    steps:
+      - uses: actions/checkout@v4
+      # (sigue abajo con el Arreglo 2)
+
 
   deploy:
     needs: build-image        # o build-test si no haces imagen
@@ -70,22 +65,12 @@ jobs:
           "IMAGE_TAG=${{ needs.build-image.outputs.meta.IMAGE_TAG }}" | Out-File -Encoding ASCII -Append .env
           Get-Content .env
 
-      - name: Down/Build/Up con PowerShell
+      - name: Compose con podman
         shell: powershell
         run: |
-          $python = "C:\Python311\python.exe"
           $podman = "C:\Program Files\RedHat\Podman\podman.exe"
-
-          # DOWN (ignorar error si no hay stack)
-          & $python -m podman_compose down
-          if ($LASTEXITCODE -ne 0) { Write-Host "No stack to stop (continuing)"; $global:LASTEXITCODE = 0 }
-
-          # (Si usas imagen de GHCR, ya no compiles aquí; si aún compilas local, deja este paso)
-          # & $python -m podman_compose build --no-cache
-          # if ($LASTEXITCODE -ne 0) { throw "Build failed" }
-
-          # UP con la config actual (usando IMAGE_TAG de .env)
-          & $python -m podman_compose up -d
-          if ($LASTEXITCODE -ne 0) { throw "Up failed" }
-
-          & $podman ps
+          & $podman login ghcr.io --username $env:GITHUBACTOR --password $env:GITHUB_TOKEN
+          & $podman pull $env:IMAGE_TAG
+          & $podman compose down
+          if ($LASTEXITCODE -ne 0) { Write-Host "no stack to stop"; $LASTEXITCODE = 0 }
+          & $podman compose up -d
