--- a/nginx.conf
+++ b/nginx.conf
@@ -1,16 +1,22 @@
 events {}
+
 http {
   upstream backend {
     server app1:8080;
     server app2:8080;
   }
+
+  log_format rr '$remote_addr - [$time_local] "$request" $status '
+                'bytes=$body_bytes_sent upstream=$upstream_addr';
+
   server {
     listen 80;
+
     location / {
       proxy_pass http://backend;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
-      access_log /var/log/nginx/access.log;
+      access_log /var/log/nginx/access.log rr;  
     }
   }
 }
