--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -102,22 +102,34 @@ jobs:
 
           # Ver contenedores
           & $podman ps
-      - name: Smoke test /DevOps 
-        shell: powershell
-        env:
-          API_KEY: 2f5ae96c-b558-4c7b-a590-a501ae1c3f6c
+      - name: Smoke test /DevOps vía LB
+        shell: pwsh
         run: |
-          # Mint JWT con el mismo secreto que usa el stack
-          $env:JWT_SECRET_B64 = (Get-Content .env | Select-String "JWT_SECRET_B64").ToString().Split('=')[1]
-          $JWT = & "C:\Program Files\Java\jdk-21\bin\java.exe" `-cp "target\classes;$(Get-ChildItem -Path target\dependency -Filter *.jar | ForEach-Object { $_.FullName } -join ';')" ` "com.diegog.devopsExercise.MintJwtRunner"
-          if (-not $JWT) { $JWT = (& mvn -q -Dexec.mainClass=com.diegog.devopsExercise.MintJwtRunner exec:java) }
-          $JWT = $JWT -replace "`r|`n",""
+          # 1) Leer el secreto EXACTO que usa el stack
+          $line = (Get-Content .env | Select-String '^JWT_SECRET_B64=')
+          if (-not $line) { throw "Falta JWT_SECRET_B64 en .env" }
+          $env:JWT_SECRET_B64 = ($line.ToString().Split('=')[1]).Trim()
+          if (-not $env:JWT_SECRET_B64) { throw "JWT_SECRET_B64 vacio" }
 
+          # 2) Mintear JWT con el wrapper de Maven (no requiere Maven instalado globalmente)
+          $mvnw = "$PWD\mvnw.cmd"
+          if (-not (Test-Path $mvnw)) { throw "mvnw.cmd no encontrado en $PWD" }
+
+          $JWT = & $mvnw -q -Dexec.mainClass=com.diegog.devopsExercise.MintJwtRunner exec:java
+          # Asegurar string plano sin CR/LF ni espacios
+          $JWT = ($JWT -join '') -replace "`r|`n","" 
+          if ([string]::IsNullOrWhiteSpace($JWT) -or $JWT.Split('.').Count -ne 3 -or $JWT.Length -lt 100) {
+            throw "JWT invalido o vacio: '$JWT'"
+          }
+          Write-Host "JWT length: $($JWT.Length)"
+
+          # 3) Llamar al LB y validar 200
           $Body = '{"message":"This is a test","to":"Juan Perez","from":"Rita Asturia","timeToLifeSec":45}'
-          $r = curl.exe -s -o resp.json -w "%{http_code}" -X POST `
-            -H "X-Parse-REST-API-Key: $env:API_KEY" `
-            -H "X-JWT-KWY: $JWT" -H "Content-Type: application/json" `
+          $code = & curl.exe -s -o resp.json -w "%{http_code}" -X POST `
+            -H "X-Parse-REST-API-Key: 2f5ae96c-b558-4c7b-a590-a501ae1c3f6c" `
+            -H "X-JWT-KWY: $JWT" `
+            -H "Content-Type: application/json" `
             --data-raw $Body http://localhost:8080/DevOps
 
           Get-Content resp.json
-          if ($r -ne "200") { throw "Smoke test failed with HTTP $r" }
+          if ($code -ne "200") { throw "Smoke test FAILED. HTTP $code" }
