--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,27 +2,27 @@ name: devops
 
 on:
   push:
-    branches: [ "main", "master" ]
+    branches: ["main", "master"]
   pull_request:
-    branches: [ "main", "master" ]
-  workflow_dispatch: {}   
+    branches: ["main", "master"]
+  workflow_dispatch: {}
 
 jobs:
   build-test:
-      runs-on: ubuntu-latest
-      steps:
-        - uses: actions/checkout@v4
-        - uses: actions/setup-java@v4
-          with:
-            distribution: temurin
-            java-version: '21'
-        - name: Cache Maven
-          uses: actions/cache@v4
-          with:
-            path: ~/.m2/repository
-            key: m2-${{ runner.os }}-${{ hashFiles('**/pom.xml') }}
-        - name: Build + Test 
-          run: mvn -B clean verify
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: "21"
+      - name: Cache Maven
+        uses: actions/cache@v4
+        with:
+          path: ~/.m2/repository
+          key: m2-${{ runner.os }}-${{ hashFiles('**/pom.xml') }}
+      - name: Build + Test
+        run: mvn -B clean verify
 
   build-image:
     needs: build-test
@@ -31,7 +31,7 @@ jobs:
     env:
       IMAGE_NAME: ghcr.io/${{ github.repository_owner }}/devops-exercise
     outputs:
-      image_tag: ${{ steps.meta.outputs.IMAGE_TAG }}   
+      image_tag: ${{ steps.meta.outputs.IMAGE_TAG }}
     steps:
       - uses: actions/checkout@v4
       - uses: docker/setup-buildx-action@v3
@@ -59,7 +59,7 @@ jobs:
     if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
     runs-on: [self-hosted, Windows, X64]
     env:
-      IMAGE_TAG: ${{ needs.build-image.outputs.image_tag }}  
+      IMAGE_TAG: ${{ needs.build-image.outputs.image_tag }}
     steps:
       - uses: actions/checkout@v4
 
@@ -102,16 +102,14 @@ jobs:
 
           # Ver contenedores
           & $podman ps
-      - name: Smoke test /DevOps vía LB
+      - name: Smoke test /DevOp
         shell: pwsh
         run: |
-          # 1) Leer el secreto EXACTO que usa el stack
           $line = (Get-Content .env | Select-String '^JWT_SECRET_B64=')
           if (-not $line) { throw "Falta JWT_SECRET_B64 en .env" }
           $env:JWT_SECRET_B64 = ($line.ToString().Split('=')[1]).Trim()
           if (-not $env:JWT_SECRET_B64) { throw "JWT_SECRET_B64 vacio" }
 
-          # 2) Mintear JWT con el wrapper de Maven (no requiere Maven instalado globalmente)
           $mvnw = "$PWD\mvnw.cmd"
           if (-not (Test-Path $mvnw)) { throw "mvnw.cmd no encontrado en $PWD" }
 
@@ -123,7 +121,6 @@ jobs:
           }
           Write-Host "JWT length: $($JWT.Length)"
 
-          # 3) Llamar al LB y validar 200
           $Body = '{"message":"This is a test","to":"Juan Perez","from":"Rita Asturia","timeToLifeSec":45}'
           $code = & curl.exe -s -o resp.json -w "%{http_code}" -X POST `
             -H "X-Parse-REST-API-Key: 2f5ae96c-b558-4c7b-a590-a501ae1c3f6c" `
