--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,6 +16,9 @@ jobs:
         with:
           distribution: temurin
           java-version: "21"
+          fetch-depth: 0
+          submodules: false
+          clean: true
       - name: Cache Maven
         uses: actions/cache@v4
         with:
