--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,12 +3,14 @@ services:
     image: ${IMAGE_TAG}
     environment:
       - JWT_SECRET_B64=${JWT_SECRET_B64}
+      - JAVA_OPTS="-XX:MaxRAMPercentage=75.0"
     ports:
       - "8081:8080"
   app2:
     image: ${IMAGE_TAG}
     environment:
       - JWT_SECRET_B64=${JWT_SECRET_B64}
+      - JAVA_OPTS="-XX:MaxRAMPercentage=75.0"
     ports:
       - "8082:8080"
 
