--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,8 +16,6 @@ jobs:
         with:
           distribution: temurin
           java-version: "21"
-          fetch-depth: 0
-          clean: true
       - name: Cache Maven
         uses: actions/cache@v4
         with:
@@ -78,6 +76,10 @@ jobs:
       IMAGE_TAG: ${{ needs.build-image.outputs.image_tag }}
     steps:
       - uses: actions/checkout@v4
+        with:
+        fetch-depth: 0   
+        clean: true
+        ref: main
 
       - name: Escribir .env
         shell: powershell
