--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -74,24 +74,21 @@ jobs:
   deploy:
     needs: build-image
     if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
-    runs-on: [self-hosted, Windows, X64, podman]   # usa tu etiqueta
-    timeout-minutes: 20
+    runs-on: [self-hosted, Windows, X64]
     env:
       IMAGE_TAG: ${{ needs.build-image.outputs.image_tag }}
-    defaults:
-      run:
-        shell: powershell
     steps:
       - uses: actions/checkout@v4
         with:
-          fetch-depth: 0
+          fetch-depth: 0    
           clean: true
           ref: main
 
       - name: Escribir .env
+        shell: powershell
         run: |
           "JWT_SECRET_B64=${{ secrets.JWT_SECRET_B64 }}" | Out-File -Encoding ASCII .env
-          "IMAGE_TAG=${{ env.IMAGE_TAG }}" | Out-File -Encoding ASCII -Append .env
+          "IMAGE_TAG=${{ env.IMAGE_TAG }}" | Out-File -Encoding ASCII -Append .env   
 
       - name: Desplegar (podman compose con fallback)
         run: |
